syntax = "proto3";

import "google/protobuf/empty.proto";
package google.protobuf;

service Info{
	rpc CheckHealth(google.protobuf.Empty) returns(HealthResponse);
}

message HealthResponse{
	bool status = 1;
}